src/components/components.css
/* Big Nav Link  Component */
.big-nav-link {
  padding: 0;
  color: black;
  transition: 0.6s ease;
}

.big-nav-link span {
  z-index: 2;
}

.big-nav-link:after {
  content: "";
  top: 0;
  left: 0;
  width: 0;
  height: 70px;
  background-image: url("../assets/images/right\ arrow.png");
  filter: brightness(0) invert(1);
  transition: all 0.6s;
}

.big-nav-link:hover {
  color: rgb(255, 255, 255);
  background-color: black;
}

.big-nav-link:hover:after {
  width: 5%;
}

/* Back Button  Component */
.back-button {
  position: absolute;
  width: 100%;
  bottom: 0;
  box-shadow: 0px -15px 0px rgb(0, 0, 0) inset;
}

/* JobDescription Component */
.job-title {
  font-family: coolvetica;
  margin-bottom: 20px;
}

.job-tech-item {
  white-space: nowrap;
  background-color: rgb(125, 189, 95);
  color: white;
  margin-right: 10px;
  padding-top: 5px;
  padding-bottom: 6px;
  padding-left: 15px;
  padding-right: 15px;
  border-radius: 25px;
  transition: 0.6s;
}

.job-tech-item:hover {
  background-color: rgb(80, 121, 61);
  transform: scale(1.2);
}

.job-point {
  margin-top: 20px;
}

